# Stock-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: IMPLEMENTATION_GUIDE.md  LANGFUSE_SETUP.md  NASDAQ10_Stock_AI_Agent_Project_Handbook.docx  Stock_Agent_Low_Level_Design_Architecture.docx  Stock_Agent_RAG_and_Amazon_Bedrock_Step_by_Step_Guide.docx
infra/: aoss-data-access-policy.json  aoss-encryption-policy.json  aoss-network-policy.json  ecs-task-definition.json  stock-agent-task-policy.json
scripts/: deploy.sh  index_reports_opensearch.py  sync_sec_reports.py  sync_yahoo_reports.py
src/stock_agent/: __init__.py  config.py  models.py  observability.py  supervisor.py
src/stock_agent/agents/: __init__.py  news_agent.py  portfolio_agent.py  rag_agent.py  sentiment_agent.py  stock_agent.py
src/stock_agent/services/: bedrock_service.py  database.py  document_service.py  pdf_service.py  s3_reports.py  vector_store.py
src/stock_agent/tools/: __init__.py  news_api.py  sec_edgar.py  stock_data.py  yahoo_news.py
tests/: conftest.py  test_bedrock_service.py  test_document_service.py  test_news_agent.py  test_observability.py  test_rag_agent.py  test_s3_reports.py  test_sec_edgar.py  test_stock_agent.py  test_streamlit_app.py  test_supervisor.py  test_vector_store.py  test_yahoo_news.py  test_yahoo_report_sync.py
